Add PhoBERT evaluation analysis and update gitignore
- Add comprehensive PhoBERT model evaluation analysis in phoBERT.md
- Compare Single-task vs Multi-task learning approaches
- Include detailed performance metrics and recommendations
- Update .gitignore to exclude large model files (>100MB)
- Keep evaluation results and analysis for reference

--- a/.gitignore
+++ b/.gitignore
@@ -30,8 +30,9 @@ ENV/
 # Jupyter Notebook
 .ipynb_checkpoints
 
-# PyTorch (exclude trained models from gitignore)
-# *.pth
+# PyTorch - exclude large PhoBERT models (>100MB)
+models/phobert_*.pth
+# Keep small models and tokenizers
 # *.pkl
 
 # IDE
